2005-12-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/utils.py:
	whoops, forgot to add a file to the repository :)

2005-12-05  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Whoops, also use gst-python oh ten oh

2005-12-02  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	* configure.ac:
	Preparation for oh ten oh
	Update dependency on (py)gtk to 2.8.0
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/glade.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/viewer.py:
	Remove pygtk 2.8 deprecated object registration

2005-12-01  Edward Hervey  <edward@fluendo.com>

	Misc updates for new gnonlin start/duration scheme
	(and no longer start/stop)

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	Fixes for better non-media-file detection
	* pitivi/objectfactory.py:
	* pitivi/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/viewer.py:
	Show proper timeline duration/status
	* pitivi/utils.py:
	New utility file, will have to add more of the common utility
	functions in there.

2005-11-26  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	sinesrc is dead, long live sinesrc

2005-11-18  Edward Hervey  <edward@fluendo.com>

	* autogen.sh:
	* configure.ac:
	Switch to using gstreamer common
	* pitivi/bin.py:
	Dynamic pad handling for SmartFileSource and SmartTimelineBin
	* pitivi/discoverer.py:
	First pre-roll, then discover properties, then set to play to get
	then thumbnail.
	Oh, and do that while removing half the codelines :)
	* pitivi/objectfactory.py:
	Properly remove (ghost)pads
	* pitivi/playground.py:
	Much saner pipeline switching
	 _ Set pipelines to READY, switch sinks
	* pitivi/timeline.py: