@@ -1,3 +1,8 @@
+2005-12-10  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/timeline.py:
+	Fix for new gnonlin api
+
 2005-12-07  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/utils.py:
